--- a/src/views/home.hbs
+++ b/src/views/home.hbs
@@ -11,15 +11,17 @@
           <h1>{{title}}</h1>
           <h2>Genre: {{genre}}</h2>
           <p>Description: {{description}}</p>
-          <a href="#" class="details">Details</a>
+          <a href="/movies/{{_id    }}" class="details">Details</a>
         </div>
       </div>
+      {{else}}
+      <div class="no-posts">
+                        <p class="no-offer">There are no posts yet...</p>
+                    </div>
     {{/each}}
     <!-- If there are posts for creature in the database display each of them -->
 
     <!-- If there are still no posts in the database display: -->
-    <!-- <div class="no-posts">
-                        <p class="no-offer">There are no posts yet...</p>
-                    </div> -->
+     
   </div>
 </section>
