--- a/src/views/details.hbs
+++ b/src/views/details.hbs
@@ -15,7 +15,8 @@
           <div class="second-info">
             <p class="card-year">Year: {{year}}</p>
             <p class="card-ranking">Rating:
-              <span id="stars">&#x2605; &#x2605; &#x2605; &#x2605;</span></p>
+              <span id="stars">{{{ratingStars}}}</span></p>
+              {{!-- <span id="stars">{{#each rating}} &#x2605; {{/each}}</span></p> --}}
           </div>
 
         </div>
